--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,10 +14,11 @@
         <p><h2>Conecte-se na sua conta</h2></p>
         <p><label>E-mail:</label></p>
         <p><input type="email" id="email" name="email"></p>
-        <p><label>Senha:</label></p>
-        <p><input type="password" id="password" name="password"></p>
 
-        <button type="submit">Entrar!</button>
+        <p><label>Senha:</label></p>
+        <p><input type="password" id="floatingInput" name="password" class="form-control"></p>
+
+        <button type="button" class="btn btn-primary" type="submit">Entrar</button>
 
         <ul class="menu">
             <li><a href="cadastro.html">Ainda não possui conta? Cadastre aqui!</a></li>
