--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login do usuário</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <div class="topo">
@@ -15,11 +17,14 @@
         <div class="conteudo">
         <form method="post" action="/login">
         <p><h2>Conecte-se na sua conta</h2></p>
-        <p><label>E-mail:</label></p>
-        <p><input type="email" id="email" name="email"></p>
-
-        <p><label>Senha:</label></p>
-        <p><input type="password" id="floatingInput" name="password" class="form-control"></p>
+        <div class="form-floating">
+            <input type="password" id="floatingInput" name="email" class="form-control" placeholder="your@gmail.com">
+            <label for="floatingInput">E-mail</label>
+        </div>
+        <div class="form-floating">
+            <input type="password" id="floatingInput" name="password" class="form-control">
+            <label for="floatingInput">Senha</label>
+        </div>
 
         <button type="button" class="btn btn-primary" type="submit">Entrar</button>
 
