Tela de cadastro pronta

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,13 +16,13 @@
     <div class="body">
         <div class="conteudo">
         <form method="post" action="/login">
-        <p><h2>Conecte-se na sua conta</h2></p>
+        <h2>Conecte-se na sua conta</h2>
         <div class="form-floating">
-            <input type="password" id="floatingInput" name="email" class="form-control" placeholder="your@gmail.com">
+            <input type="email" id="floatingInput" name="email" class="form-control" placeholder="email@gmail.com">
             <label for="floatingInput">E-mail</label>
         </div>
         <div class="form-floating">
-            <input type="password" id="floatingInput" name="password" class="form-control">
+            <input type="password" id="floatingInput" name="senha" class="form-control" placeholder="senha">
             <label for="floatingInput">Senha</label>
         </div>
 
