--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -10,7 +10,7 @@
 <body>
     <div class="topo">
         <div class="logo">
-            <img src="logo-senac-cnc-color-100.png" alt="">
+            <img src="/images/logo-senac-cnc-color-100.png" alt="">
         </div>
     </div>
 
@@ -18,7 +18,7 @@
         <div class="conteudo">
     <p><h2>Cadastro de usuário</h2></p>
 
-    <form method="post" action="/cadastro">
+    <!-- <form method="post" action="/cadastro">
         <p><label>Nome completo:</label></p>
         <input type="text" name="nome">
         <p><label>E-mail:</label></p>
@@ -34,6 +34,35 @@
         <label for="conta3"> Aluno</label><br>
 
         <p><button type="submit">Cadastre-se!</button></p>
+    </form> -->
+    <form method="post" action="/cadastro">
+        <div class="form-floating">
+            <input type="nome" id="floatingInput" name="nome" class="form-control" placeholder="nome">
+            <label for="floatingInput">Nome completo:</label>
+        </div>
+        <div class="form-floating">
+            <input type="email" id="floatingInput" name="email" class="form-control" placeholder="email@gmail.com">
+            <label for="floatingInput">E-mail</label>
+        </div>
+        <div class="form-floating">
+            <input type="password" id="floatingInput" name="senha" class="form-control" placeholder="senha">
+            <label for="floatingInput">Senha</label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="conta" id="conta1" value="admin">
+            <label for="conta1">Administrador</label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="conta" id="conta2" value="professor">
+            <label for="conta2">Professor</label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="conta" id="conta3" value="aluno">
+            <label for="conta3">Aluno</label>
+        </div>
+        
+
+        <button type="button" class="btn btn-primary" type="submit">Cadastre-se</button>
     </form>
 
         <ul class="menu">
