--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -10,7 +10,7 @@
 <body>
     <div class="topo">
         <div class="logo">
-            <img src="/images/logo-senac-cnc-color-100.png" alt="">
+            <img src="/images/logo-senac-cnc-color-100.png">
         </div>
     </div>
 
