--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="topo">
         <div class="logo">
-            <img src="/images/logo-senac-cnc-color-100.png">
+            <img src="images/logo-senac-cnc-color-100.png">
         </div>
     </div>
 
@@ -21,7 +21,7 @@
     <form method="post" action="/cadastro">
         <div class="form-floating">
             <input type="nome" id="floatingInput" name="nome" class="form-control" placeholder="nome">
-            <label for="floatingInput">Nome completo:</label>
+            <label for="floatingInput">Nome completo</label>
         </div>
         <div class="form-floating">
             <input type="email" id="floatingInput" name="email" class="form-control" placeholder="email@gmail.com">
