--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
             <input type="email" id="floatingInput" name="email" class="form-control" placeholder="email@gmail.com">
             <label for="floatingInput">E-mail</label>
         </div>
-        <div class="form-floating">
+        <div class="form-control">
             <input type="password" id="floatingInput" name="senha" class="form-control" placeholder="senha">
             <label for="floatingInput">Senha</label>
         </div>
