--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Login</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login do usuário</title>
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <form method="post" action="/login">
+        <p><h2>Conecte-se na sua conta</h2></p>
+        <p><label>E-mail:</label></p>
+        <p><input type="email" id="email" name="email"></p>
+        <p><label>Senha:</label></p>
+        <p><input type="password" id="password" name="password"></p>
+
+        <button type="submit">Entrar!</button>
+
+        <ul class="menu">
+            <li><a href="cadastro.html">Ainda não possui conta? Cadastre aqui!</a></li>
+        </ul>
+    </form>
 </body>
 </html>
