--- a/src/main/resources/templates/acessosolicitacao.html
+++ b/src/main/resources/templates/acessosolicitacao.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>Bem-vindo</title>
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <div class="topo">
+        <div class="logo">
+            <img src="logo-senac-cnc-color-100.png">
+        </div>
+    </div>
+    <div class="body">
+        <div class=conteudo>
+            <div class="criar">
+    <p><h2>Você deseja criar uma solicitação?</h2></p>
+    <ul class="menu">
+        <p><li><a href="criacaosolicitacao.html">Crie aqui!</a></li></p>
+    </ul>
+    </div>
 
-    
+    <div class="existente">
+    <p><h2>Deseja ver uma solicitação existente?</h2></p>
+    <ul class="menu">
+    <p><li><a href="respostasolicitacao.html">Clique aqui!</a></li></p>
+    </ul>
+    </div>
+</div>
+</div>
 </body>
 </html>
