--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
     <title>Cadastro</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <div class="topo">
+        <div class="logo">
+            <img src="logo-senac-cnc-color-100.png" alt="">
+        </div>
+    </div>
 
+    <div class="body">
+        <div class="conteudo">
     <p><h2>Cadastro de usuário</h2></p>
 
     <form method="post" action="/cadastro">
@@ -28,10 +32,12 @@
         <label for="conta3"> Aluno</label><br>
 
         <p><button type="submit">Cadastre-se!</button></p>
+    </form>
 
         <ul class="menu">
             <li><a href="index.html">Já possui conta? Entre aqui!</a></li>
         </ul>
-    </form>
+</div>
+</div>
 </body>
 </html>
