--- a/src/main/resources/templates/criacaosolicitacao.html
+++ b/src/main/resources/templates/criacaosolicitacao.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
     <title>Faça a sua solicitação</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
+  <div class="topo">
+    <div class="logo">
+      <img src="logo-senac-cnc-color-100.png">
+    </div>
+  </div>
+  <div class="body">
+    <div class="conteudo">
     <form method="post" action="/criarsolicitacao">
     <p><label for="solicitacao">Faça a sua solicitação:</label></p>
 
@@ -21,6 +24,8 @@
 
     <p><textarea name="comentarios">Fale sobre o seu pedido.</textarea></p>
     <p><button type="submit">Enviar</button></p>
+  </div>
+  </div>
 </form>
 </body>
 </html>
