Models criados, sistema de login e cadastro pronto

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,13 +15,13 @@
     </div>
     <div class="body">
         <div class="conteudo">
-        <form method="post" action="/login">
+        <form method="post" action="/validacaoLogin">
         <h2>Conecte-se na sua conta</h2>
         <div class="form-floating">
             <input type="email" id="floatingInput" name="email" class="form-control" placeholder="email@gmail.com">
             <label for="floatingInput">E-mail</label>
         </div>
-        <div class="form-control">
+        <div class="form-floating">
             <input type="password" id="floatingInput" name="senha" class="form-control" placeholder="senha">
             <label for="floatingInput">Senha</label>
         </div>
