--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -18,7 +18,7 @@
         <div class="conteudo">
     <p><h2>Cadastro de usuário</h2></p>
 
-    <form method="post" action="/cadastro">
+    <form method="post" action="/salvarCadastro">
         <div class="form-floating">
             <input type="nome" id="floatingInput" name="nome" class="form-control" placeholder="nome">
             <label for="floatingInput">Nome completo</label>
