--- a/src/main/resources/templates/criacaosolicitacao.html
+++ b/src/main/resources/templates/criacaosolicitacao.html
@@ -25,7 +25,7 @@
     </select>
 
     <div class="form-control">
-      <textarea class="form-control" placeholder="Digite aqui detalhes da sua solicitação" id="detalhes-da-solicitacao" rows="10"></textarea>
+      <textarea class="form-control" placeholder="Digite aqui detalhes da sua solicitação" id="detalhesDaSolicitacao" rows="10"></textarea>
     </div>
     <button type="button" class="btn btn-primary" type="submit">Enviar</button>
   </div>
