Configurado o acesso as solicitações pelo href

--- a/src/main/resources/templates/acessosolicitacao.html
+++ b/src/main/resources/templates/acessosolicitacao.html
@@ -18,14 +18,14 @@
             <div class="criar">
     <p><h2>Você deseja criar uma solicitação?</h2></p>
     <ul class="menu">
-        <p><li><a href="criacaosolicitacao.html">Crie aqui!</a></li></p>
+        <li><a href="/criarsolicitacao">Crie aqui!</a></li>
     </ul>
     </div>
 
     <div class="existente">
     <p><h2>Deseja ver uma solicitação existente?</h2></p>
     <ul class="menu">
-    <p><li><a href="respostasolicitacao.html">Clique aqui!</a></li></p>
+        <li><a href="/respostasolicitacao">Clique aqui!</a></li>
     </ul>
     </div>
 </div>
