modificado o caminho dos botões de cadastro e login

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class="body">
         <div class="conteudo">
-        <form method="post" action="/validacaoLogin">
+        <form method="post" action="/validacaologin">
         <h2>Conecte-se na sua conta</h2>
         <div class="form-floating">
             <input type="email" id="floatingInput" name="email" class="form-control" placeholder="email@gmail.com">
@@ -29,7 +29,7 @@
         <button type="button submit" class="btn btn-primary">Entrar</button>
 
         <ul class="menu">
-            <li><a href="cadastro.html">Ainda não possui conta? Cadastre aqui!</a></li>
+            <li><a href="/direcionarcadastro">Ainda não possui conta? Cadastre aqui!</a></li>
         </ul>
 </div>
 </body>
