--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -49,7 +49,7 @@
     </form>
 
         <ul class="menu">
-            <li><a href="index.html">Já possui conta? Entre aqui!</a></li>
+            <li><a href="/direcionarlogin">Já possui conta? Entre aqui!</a></li>
         </ul>
 </div>
 </div>
