testes do html para página especifica dependendo do tipo de conta selecionada

--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -45,7 +45,7 @@
         </div>
         
 
-        <button type="button submit" class="btn btn-primary">Cadastre-se</button>
+        <button type="button submit" class="btn btn-primary" id="cadastroBtn">Cadastre-se</button>
     </form>
 
         <ul class="menu">
