--- a/src/main/resources/templates/acessosolicitacao.html
+++ b/src/main/resources/templates/acessosolicitacao.html
@@ -6,6 +6,19 @@
     <title>Bem-vindo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const cadastroBtn = document.getElementById("cadastroBtn");
+        
+            cadastroBtn.addEventListener("click", function(event) {
+                const selectedAccount = document.querySelector('input[name="conta"]:checked').value;
+        
+                if (selectedAccount === "admin") {
+                    window.location.href = "/respostasolicitacao";
+                }
+            });
+        });
+        </script>
 </head>
 <body>
     <div class="topo">
