--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,60 +1,234 @@
 * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
+
+
+/*Tela de Criar Solicitacao*/
+
 
 .topo {
-    padding: 10px;
-    display: flex;
-    align-items: center;
-  }
-  
-  .logo img {
-    max-width: 100px;
-    height: auto;
-  }
-  
-
-  .body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-  }
-  
-  .conteudo {
-    text-align: center;
-    padding: 20px;
-  }
-  
-
-  form {
-    max-width: 400px; 
-  }
-  
-  
-  button {
-    padding: 10px 20px;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    border: none;
-    cursor: pointer; 
-    border-radius: 5px; 
-  }
-  
-  .menu a {
-    color: #333; 
-    text-decoration: none; 
-  }
-  
-  .menu a:hover {
-    text-decoration: underline; 
-  }
-
-.criar {
-    margin-bottom: 20px;
+  display: flex;
 }
 
-.existente {
-    margin-top: 20px; 
+.logo img {
+  max-width: 120px;
+  height: auto;
+  margin-top: 20px;
+  margin-left: 30px;
+  padding-bottom: 9px;
+}
+
+.topo a{
+  padding-left: 20px;
+  text-decoration: none;
+  color: #003466;
+  font-size: large;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.links{
+  padding-top: 30px;
+  padding-left: 25px; 
+}
+
+.lista{
+  display: flex;
+  padding: 10px;
+  list-style: none;
+}
+
+.barracima{
+  background: #003466;
+  height: 3px;
+  margin-top: none;
+  width: 100%;
+}
+
+.body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 120px;
+  font-size: small;
+}
+
+.criar{
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  }
+
+.reserva{
+  border: 2px #003466;
+  border-style: solid;
+  border-radius: 9px;
+  padding: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.solicitacao{
+  font-family: Arial, Helvetica, sans-serif;
+  border: 1px #003466;
+  border-style: double;
+  border-width: 7px;
+  border-radius: 9px;
+  padding: 130px;
+  margin-top: 20px;
+}
+
+h3{
+  font-size: 18px;
+}
+
+.botao{
+  display: flex;
+  padding-top: 15px;
+  align-items: center;
+  justify-content: center;
+}
+
+button{
+  background-color: #F7941d;
+  border: none;
+  border-radius: 8px;
+  padding: 11px 53px;
+  color: white;
+  font-size: 29px;
+}
+
+.barrabaixo{
+  background: #F7941d;
+  height: 3px;
+  margin-top: 100px;
+  width: 100%;
+}
+
+.rodape{
+  background: #003466;
+  height: 100px;
+  width: 100%;
+  display: flex;
+}
+
+.logorodape{
+  height: 60px;
+  width: 95px;
+  margin-left: 300px;
+  margin-top: 22px;
+}
+
+.direitos{
+  color: white;
+  margin-top: 36px;
+  margin-left: 425px;
+}
+
+.form-control{
+  color: #003466;
+}
+
+
+/*Tela de Cadastro*/
+
+
+.cadastro{
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+}
+
+.form-floating{
+  border: #003466 2px;
+  border-style: solid;
+  border-radius: 9px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  margin: 5px;
+  margin-top: 10px;
+}
+
+.form-check{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 17px;
+  margin-left: 73px;
+  margin-top: 10px;
+}
+
+
+
+.botaocadastro{
+  background-color: #F7941d;
+  border: none;
+  border-radius: 8px;
+  padding: 6px 31px;
+  color: white;
+  font-size: 29px;
+  margin-left: 38px;
+  margin-top: 15px;
+}
+
+.menucadastro{
+  list-style: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
+  margin-top: 35px;
+}
+
+a{
+  text-decoration: none;
+  color: black;
+}
+
+label{
+  color: #003466;
+}
+
+
+/* Index - Tela de Login */
+
+
+
+.btn{
+  background-color: #F7941d;
+  border: none;
+  border-radius: 8px;
+  padding: 6px 31px;
+  color: white;
+  font-size: 29px;
+  margin-left: 30%;
+  margin-top: 15px;
+}
+
+.menuindex{
+  list-style: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
+  margin-top: 35px;
+}
+
+/* Tela de Soliticaçoes */
+
+.bodysolicitacao{
+  margin: 230px 0px;
+  padding-left: 35%;
+  padding-top: 25px;
+  padding-bottom: 25px;
+
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
+  
+  background-color: #003466;
+  border: #F7941d 2px;
+  border-style: solid;
+  border-radius: 9px;
+}
+
+.h2solicitacao{
+  padding-top: 20px;
+}
+
+.botaosolicitacao{
+  padding: 10px 30px;
+  margin-left: 115px;
+  margin-top: 10px;
 }
