--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -5,53 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="topo">
         <div class="logo">
-            <img src="/images/logo-senac-cnc-color-100.png">
+            <img class="logosenac" src="images/logo-senac-cnc-color-100.png">
+        </div>
+        <div class="links">
+            <ul class="lista">
+                <li><a href="#">O Senac</a></li>
+                <li><a href="#">Unidades</a></li>
+                <li><a href="#">Gratuidades</a></li>
+                <li><a href="#">Educação a Distancia</a></li>
+                <li><a href="#">Transparência e Prestação de Contas</a></li>
+
+            </ul>
         </div>
     </div>
+    <div class="barracima">
 
+    </div>
     <div class="body">
         <div class="conteudo">
-    <p><h2>Cadastro de usuário</h2></p>
+            <p><h2 class="cadastro">Cadastro de usuário</h2></p>
 
-    <form method="post" action="/salvarCadastro">
-        <div class="form-floating">
-            <input type="nome" id="floatingInput" name="nome" class="form-control" placeholder="nome">
-            <label for="floatingInput">Nome completo</label>
-        </div>
-        <div class="form-floating">
-            <input type="email" id="floatingInput" name="email" class="form-control" placeholder="email@gmail.com">
-            <label for="floatingInput">E-mail</label>
-        </div>
-        <div class="form-floating">
-            <input type="password" id="floatingInput" name="senha" class="form-control" placeholder="senha">
-            <label for="floatingInput">Senha</label>
-        </div>
-        <div class="form-check">
-            <input class="form-check-input" type="radio" name="conta" id="conta1" value="admin">
-            <label for="conta1">Administrador</label>
-        </div>
-        <div class="form-check">
-            <input class="form-check-input" type="radio" name="conta" id="conta2" value="professor">
-            <label for="conta2">Professor</label>
-        </div>
-        <div class="form-check">
-            <input class="form-check-input" type="radio" name="conta" id="conta3" value="aluno">
-            <label for="conta3">Aluno</label>
-        </div>
+            <form method="post" action="/salvarCadastro">
+                <div class="form-floating">
+                    <input type="nome" id="floatingInput" name="nome" class="form-control" placeholder="nome">
+                    <label for="floatingInput">Nome completo</label>
+                </div>
+                <div class="form-floating">
+                    <input type="email" id="floatingInput" name="email" class="form-control" placeholder="email@gmail.com">
+                    <label for="floatingInput">E-mail</label>
+                </div>
+                <div class="form-floating">
+                    <input type="password" id="floatingInput" name="senha" class="form-control" placeholder="senha">
+                    <label for="floatingInput">Senha</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="conta" id="conta1" value="admin">
+                    <label for="conta1">Administrador</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="conta" id="conta2" value="professor">
+                    <label for="conta2">Professor</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="conta" id="conta3" value="aluno">
+                    <label for="conta3">Aluno</label>
+                </div>
         
 
-        <button type="button submit" class="btn btn-primary" id="cadastroBtn">Cadastre-se</button>
-    </form>
+                <button class="botaocadastro btn btn-primary" type="button submit">Cadastre-se</button>
+            </form>
 
-        <ul class="menu">
-            <li><a href="/direcionarlogin">Já possui conta? Entre aqui!</a></li>
-        </ul>
-</div>
-</div>
+            <ul class="menucadastro">
+                <li><a href="index.html">Já possui conta? Entre aqui!</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="barrabaixo">
+
+    </div>
+    <div class="rodape">
+        <img src="images/logosenac.png" alt="" class="logorodape">
+        <p class="direitos">© Todos os direitos reservados - 2023</p>
+    </div>
 </body>
 </html>
