Foram criados alguns GetMappings e tentativa de arrumar botões

--- a/src/main/resources/templates/versolicitacoes.html
+++ b/src/main/resources/templates/versolicitacoes.html
@@ -23,17 +23,38 @@
     </div>
     <div class="barracima"></div>
     <div class="bodysolicitacao">
-      <div method="get" action="/criarsolicitacao">
+      <div>
         <h2 class="h2solicitacao">Você deseja criar uma solicitação?</h2>
-        <button type="submit" class="botaosolicitacao">Crie aqui!</button>
+        <button
+          type="submit"
+          class="botaosolicitacao"
+          method="get"
+          action="/criarsolicitacao"
+        >
+          Crie aqui!
+        </button>
       </div>
-      <div method="get" action="/solicitacao">
+      <div>
         <h2 class="h2solicitacao">Deseja ver uma solicitação existente?</h2>
-        <button type="submit" class="botaosolicitacao">Clique aqui!</button>
+        <button
+          type="submit"
+          class="botaosolicitacao"
+          method="get"
+          action="/versolicitacoes"
+        >
+          Clique aqui!
+        </button>
       </div>
-      <div method="get" action="/respostasolicitacao">
+      <div>
         <h2 class="h2solicitacao">Gerenciar solicitações</h2>
-        <button type="submit" class="botaosolicitacao">Clique aqui!</button>
+        <button
+          type="submit"
+          class="botaosolicitacao"
+          method="get"
+          action="/respostasolicitacao"
+        >
+          Clique aqui!
+        </button>
       </div>
     </div>
     <div class="barrabaixo"></div>
