--- a/src/main/resources/templates/criarsolicitacao.html
+++ b/src/main/resources/templates/criarsolicitacao.html
@@ -28,16 +28,17 @@
     </div>
     <div class="body">
         <div class=conteudo>
-            
-            <div class="criar">
+            <form method="post" action="/enviarsolicitacao"></form>
+                <div class="criar">
                     <p><h2>Faça sua solicitação</h2></p>
-            </div>
-            <div class="form-control">
-               <textarea class="form-control" placeholder="Digite aqui sua solicitação:" name="detalhesDaSolicitacao" rows="10" cols="80"></textarea> 
-            </div>
-            <div class="botao">
-                <button type="button submit">Enviar</button>
-            </div>
+                </div>
+                <div class="form-control">
+                    <textarea class="form-control" placeholder="Digite aqui sua solicitação:" name="detalhesDaSolicitacao" rows="10" cols="80"></textarea> 
+                </div>
+                <div class="botao">
+                    <button type="button submit">Enviar</button>
+                </div>
+            </form>
         </div>
     </div>
     <div class="barrabaixo">
