atualizações do css e htmls

--- a/src/main/resources/templates/versolicitacoes.html
+++ b/src/main/resources/templates/versolicitacoes.html
@@ -23,38 +23,17 @@
     </div>
     <div class="barracima"></div>
     <div class="bodysolicitacao">
-      <div>
+      <div method="get" action="/criarsolicitacao">
         <h2 class="h2solicitacao">Você deseja criar uma solicitação?</h2>
-        <button
-          type="submit"
-          class="botaosolicitacao"
-          method="get"
-          action="/criarsolicitacao"
-        >
-          Crie aqui!
-        </button>
+        <button type="submit" class="botaosolicitacao">Crie aqui!</button>
       </div>
-      <div>
+      <div method="get" action="/solicitacao">
         <h2 class="h2solicitacao">Deseja ver uma solicitação existente?</h2>
-        <button
-          type="submit"
-          class="botaosolicitacao"
-          method="get"
-          action="/versolicitacoes"
-        >
-          Clique aqui!
-        </button>
+        <button type="submit" class="botaosolicitacao">Clique aqui!</button>
       </div>
-      <div>
+      <div method="get" action="/respostasolicitacao">
         <h2 class="h2solicitacao">Gerenciar solicitações</h2>
-        <button
-          type="submit"
-          class="botaosolicitacao"
-          method="get"
-          action="/respostasolicitacao"
-        >
-          Clique aqui!
-        </button>
+        <button type="submit" class="botaosolicitacao">Clique aqui!</button>
       </div>
     </div>
     <div class="barrabaixo"></div>
