--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="body">
         <div class="conteudo">
-                <form method="post" action="/validacaologin">
+                <form method="post" action="/validacaoLogin">
                 <h2>Conecte-se na sua conta</h2>
             <div class="form-floating">
                 <input type="email" id="floatingInput" name="email" class="form-control" placeholder="email@gmail.com">
